--- a/HNG/My blog.html
+++ b/HNG/My blog.html
@@ -27,17 +27,15 @@
   <h2> My Focus during the internship</h2>
   <span class="b">
   <uL class="c">
-    <li>Expanding my knowledge of Frontend development</li>
+    <li>Expanding my knowledge of Frontend development</li> &
     <li>Meeting and working with developers all around the world</li>
-    <li>Improving my communication skills and handling challenging projects</li>
-  </uL>
+    
   </span>
 
 
 
   <p>
-    In conclusion, my journey as a frontend developer has been rewarding, but I know there’s still a long way to go. HNG is the stepping stone I need to achieve my goals, and am excited to embrace the challenges and opportunities it offers.
-     With dedication, hard work, and the right mindset, am confident that this internship will be a turning point in my career.
+    In conclusion, my journey as a frontend developer has been rewarding, but I know there’s still a long way to go.
 
      Thank you for giving me the opportunity am grateful
   </p>
